--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* General Styles */
 html{
-   background:url(http://phutora.com/img/friends3.jpg) no-repeat;
+   background:url(https://phutora.com/img/friends3.jpg) no-repeat;
    background-size: cover;
    height:100%;
    background-color: #000;
